--- a/quarto-2.qmd
+++ b/quarto-2.qmd
@@ -1,5 +1,29 @@
 ---
 title: "Quarto 2"
+author: "Umaira"
 format: html
+execute: 
+  echo: false
 ---
+
+
+```{r}
+#| message: false 
+
+library(tidyverse)
+library(palmerpenguins)
+
+```
+
+
+```{r}
+#| warning: false
+penguins |> 
+  drop_na(body_mass_g, flipper_length_mm) |> 
+  ggplot(aes(x = body_mass_g, y = flipper_length_mm, color = species)) +
+    geom_point() +
+    labs(title = "Penguins Body Mass compared to Flipper Length", 
+         x = "Body Mass", 
+         y = "Flipper Length")
+```
 
